<resources>
    <string name="app_name">IndividualGame</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="time_keeper"> Time: </string>
    <string name="brickTapString">0</string>
    <string name="scoreText"> Score </string>
    <string name="round"> Round </string>
    <string name="tap"> Taps:</string>
    <string name="first">1st: </string>
    <string name="second">2nd: </string>
    <string name="third">3rd: </string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="menuString">Menu</string>
</resources>
