<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="trevorwarner.individualgame.LeaderBoard"
    android:background="#ff60e6b7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_leader_board"
        android:id="@+id/LBtextview"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first"
        android:id="@+id/firstPlace"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/LBpadding"
        android:paddingBottom="@dimen/LBpadding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/second"
        android:id="@+id/secondPlace"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/LBpadding"
        android:paddingBottom="@dimen/LBpadding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/third"
        android:id="@+id/thirdPlace"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/LBpadding"
        android:paddingBottom="@dimen/LBpadding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/menuString"
            android:id="@+id/menuButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
